--- a/CongressionalDeception/requirements.txt
+++ b/CongressionalDeception/requirements.txt
@@ -1,5 +1,6 @@
-Flask==2.1.0 
-Flask-WTF==0.14.2
-WTForms==2.2.1
-pymongo==4.3.3
-Fask-reCaptcha==0.4.2
+Flask>=2.1.0 
+Flask-WTF>=0.14.2
+WTForms>=2.2.1
+pymongo>=4.3.3
+Fask-reCaptcha>=0.4.2
+jinja2==3.0.0
